{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "ef3639cc-a5c0-4f84-929a-5097f9e633d3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "201cb41e-fad5-4f76-97d6-8a1d03d46202",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Climb",
                    "type": "Button",
                    "id": "d607b5e2-91e4-49bd-8149-10e5767f413e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "11bd9998-8169-453d-81b0-fd71acb52a62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "737c3481-8159-432c-b3fe-61d0d17e0072",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "X axis",
                    "id": "3ae652f8-7301-4ea5-95dc-b0fee861f399",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "b326ade0-25ec-41bd-a9f2-ad7fc2633fd1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "2a078cd1-2aa4-402b-b71f-637b3160ba28",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "61978aa8-c5d3-4699-9e31-5b6c22dcb824",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8040052d-c8b1-48df-8fa3-07be5b928f59",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Y axis",
                    "id": "b5bd1d30-1bf1-4f0d-a708-5d849d032581",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "edab14fd-0632-4fc3-9e79-ce372b1ccfa0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "708e627c-0495-4dde-a297-92f0296a2103",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Utility",
            "id": "4b3cad03-71e5-40f2-9a3c-70ebee6fcd9d",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "125ff074-6394-4f59-ac7d-12b410e58050",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3812227-c5c2-4260-8438-d15a4dc5d76d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}